--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/subirNuevaImportacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/subirNuevaImportacion.tmpl
@@ -123,7 +123,7 @@
 	
              
               <div class="row"></div>
-              <div id="progressIndicator_1" clas="progressIndicator" > 
+              <div id="progressIndicator_1" class="progressIndicator hide" > 
 
                 <div  class="progress progress-success progress-striped active">
                   <div id="progressBar_1" class="bar"></div>
