--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -264,14 +264,12 @@
                 [% "Para los elementos que est&aacute;n marcados:" | i18n %]
                   [% PERL %]
                       print C4::AR::Filtros::action_set_button(    
-                            title           => "[% 'Ejemplares' | i18n %]",
                             button          => 'btn btn-primary',
-
+                            title => "[% 'Modificar' | i18n %]",
+                            action =>"generarForm([% id1 %],[% id2 %])",
+                            icon =>"icon-white icon-edit",
+                                                
                             actions         => [
-                                                {title => "Modificar", 
-                                                 action=>"generarForm([% id1 %],[% id2 %])",
-                                                 icon=>"icon-edit"
-                                                },
                                                 {title => "Etiquetas", 
                                                  action=>"generarVariasEtiquetas([% id2 %])", 
                                                  icon=>"icon-barcode"
