--- a/intranet/htdocs/intranet-tmpl/admin/publicar_twitter.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/publicar_twitter.tmpl
@@ -39,7 +39,7 @@
              publicar_twitter();
              $.fancybox.close();
         });      
-        
+        $('#post_twitter').focus();
         $("#post_twitter").charCount({
             limit: 0,        
             warning: 10,
@@ -56,7 +56,7 @@
                 <h3>[% 'Nuevo tweet' | i18n %]<h3>
               </div>
               <div class="modal-body">
-                              <textarea id="post_twitter" name="textarea_twitter" class="input-xxlarge" onkeyup="enableDisableButton();"></textarea>
+                              <textarea id="post_twitter" name="textarea_twitter" class="input-xxlarge" onkeyup="enableDisableButton();" autofocus="autofocus"></textarea>
                               <p class="help-block">[% 'Sea breve, no m&aacute;s de 140 caracteres' | i18n %].</p>
                 </div>                
               </div>
