--- a/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra.tmpl
@@ -2,6 +2,24 @@
 
 <script type="text/javascript">
 
+    function showNovedad(id){
+
+		var objAH_novedadIntra	 		= new AjaxHelper(updateShowNovedadIntra);
+		objAH_novedadIntra.showOverlay  = true;
+		objAH_novedadIntra.debug        = true;
+		objAH_novedadIntra.url          = '[% url_prefix %]/admin/global/ver_novedad_intra.pl';
+		objAH_novedadIntra.id			= id;
+		objAH_novedadIntra.sendToServer();
+	}
+
+	function updateShowNovedadIntra(responseText){
+	    if (!verificarRespuesta(responseText))
+	        return(0);
+
+	    $('#mostrar_novedad').html(responseText);
+	    $('#mostrar_novedad').modal();
+	}
+
     function obtenerNovedades(){
         objAH               = new AjaxHelper(updateObtenerNovedades);
         objAH.debug         = true;
