--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/historialPrestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/historialPrestamos.tmpl
@@ -14,7 +14,7 @@
                                     columns         => ['[% "T&iacute;tulo"|i18n %]','[% "Autor"|i18n %]',
                                                         '[% "Edici&oacute;n" | i18n %]','[% "C&oacute;digo" | i18n %]','[% "Fecha" | i18n %]',
                                                         '[% "Renovaci&oacute;n" | i18n %]','[% "Pr&eacute;stamo" | i18n %]',
-                                                        '[% "Catidad de Renovaciones" | i18n %]','[% "Vencimiento" %]','[% "Devoluci&oacute;n" | i18n %]'
+                                                        '[% "Renovaciones" | i18n %]','[% "Vencimiento" %]','[% "Devoluci&oacute;n" | i18n %]'
                                                       ]
                                                                     
                                           ) ;
