--- a/intranet/htdocs/intranet-tmpl/admin/referencias/detalle_tabla.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/referencias/detalle_tabla.tmpl
@@ -23,58 +23,64 @@
 </script>
 <div id="tabla_referencia">
 	<fieldset>
-	    <legend>[% "Tabla " | i18n %]: [% tabla %]</legend>
 	        <div class="search_tabla">
-	            <fieldset>
-	                <form onsubmit="return false" class="well form-search">
-	                    <input type="text" id="search_tabla" name="search_tabla" class="input-medium search-query"/>
-	                    
-	                    [% PERL %]
-	                        print C4::AR::Filtros::to_Button(   text    => "[% 'Buscar' | i18n %]",
-	                                                            boton   => "boton_agregar",
-	                                                            onClick => "obtenerTablaFiltrada();",
-	                                                            title   => "[% 'Buscar' | i18n %]",
-	                                                            inline  => "1"
-	                                ) ;
-	                    [% END %]
-	                    
-	                    [% PERL %]
-	                        print C4::AR::Filtros::setHelpInput(   text    => "[% 'Ingrese la palabra por la cual desea filtrar' | i18n %]",
-	                                ) ;
-	                    [% END %]
-	                </form>
-	            </fieldset>
+	            [% IF mostrar_asignar %]
+		            <fieldset>
+		                <form onsubmit="return false" class="well form-search">
+		                    <input type="text" id="search_tabla" name="search_tabla" class="input-medium search-query"/>
+		                    
+		                    [% PERL %]
+		                        print C4::AR::Filtros::to_Button(   text    => "[% 'Buscar' | i18n %]",
+		                                                            boton   => "boton_agregar",
+		                                                            onClick => "obtenerTablaFiltrada();",
+		                                                            title   => "[% 'Buscar' | i18n %]",
+		                                                            inline  => "1"
+		                                ) ;
+		                    [% END %]
+		                    
+		                    [% PERL %]
+		                        print C4::AR::Filtros::setHelpInput(   text    => "[% 'Ingrese la palabra por la cual desea filtrar' | i18n %]",
+		                                ) ;
+		                    [% END %]
+		                </form>
+		            </fieldset>
+		        [% END %]
 	        <div class="datos_tabla_div" id="datos_tabla_div">
-                <div class="contenedor_paginador">[% paginador %]</div>
-                <div class="alert alert-info">[% "De un total de" | i18n %]&nbsp;<b>[% cantidad_total %]</b></div>
-                
+	           [% IF mostrar_asignar %]
+	                <div class="contenedor_paginador">[% paginador %]</div>
+	                <div class="alert alert-info">[% "De un total de" | i18n %]&nbsp;<b>[% cantidad_total %]</b></div>
+               [% END %]                
 	            <table id="tablaResult" class="table table-striped">
 	                <thead>
 	                    <tr class="titulo_tabla_resultado">
 	                        [% FOREACH campo IN campos %]
 	                            <th class="click"> [% campo %]</th>
 	                        [% END %]
-	                        <th>[% "Asignar" | i18n %]</th>
+	                        [% IF mostrar_asignar %]
+    	                        <th>[% "Asignar" | i18n %]</th>
+    	                    [% END %]
 	                    </tr>
 	                </thead>
 	                <tbody>
 	                        [% FOREACH dato IN datos %]
 	                          <tr>
 	                            [% dato.printAsTableElement %]
-	                            <td>
-
-	                             [% PERL %]
-                                  print C4::AR::Filtros::action_button( 
-                                                                  button    => "btn btn-warning click",
-                                                                  action    => 'mostrarReferencias("[% tabla %]", "[% dato.getPkValue %]")', 
-                                                                  icon      => "icon-move icon-white",
-                                                                  title     => "",
-                                                              ) ;
-
-
-                                [% END %]
-	                            
-	                            </td>
+	                            [% IF mostrar_asignar %]
+		                            <td>
+	                        
+		                             [% PERL %]
+	                                  print C4::AR::Filtros::action_button( 
+	                                                                  button    => "btn btn-warning click",
+	                                                                  action    => 'mostrarReferencias("[% tabla %]", "[% dato.getPkValue %]")', 
+	                                                                  icon      => "icon-move icon-white",
+	                                                                  title     => "",
+	                                                              ) ;
+	
+	
+	                                [% END %]
+		                            
+		                            </td>
+		                        [% END %]
 	                          </tr>
 	                        [% END %]
 	                </tbody>
