--- a/intranet/htdocs/intranet-tmpl/catalogacion/tablasReferencia/tablasReferencia.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/tablasReferencia/tablasReferencia.tmpl
@@ -8,6 +8,7 @@ function obtenerTabla(){
     objAH.showOverlay   = true;
     objAH.alias_tabla   = $('#tablas_ref').val();
     objAH.accion        = "OBTENER_TABLA";
+    objAH.asignar       = 1;
     objAH.sendToServer();
 }
 
