--- a/intranet/htdocs/intranet-tmpl/circ/sanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/sanciones.tmpl
@@ -78,7 +78,7 @@ function updateSanciones(responseText){
 
 
 $(document).ready( function() {
-	buscarSancion();
+	mostrarSanciones();
 	onEnter("buscar",buscarSancion);
 });
 
