estantes opac - agregar cont estantes intra

--- a/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
@@ -124,6 +124,7 @@
                   [% PERL %]
                                       print C4::AR::Filtros::action_button(
                                                                           button   => "btn btn-primary",
+                                                                          id       => "buscarContBoton",
                                                                           icon     => "icon-search icon-white",
                                                                           action   => "buscarContenido();",
                                                                           title    => "[% 'Buscar' | i18n %]",
