--- a/intranet/htdocs/intranet-tmpl/changepassword.tmpl
+++ b/intranet/htdocs/intranet-tmpl/changepassword.tmpl
@@ -62,7 +62,7 @@ function guardarCambiarPassword(){
     $("#actual_password").val(hash_actual);
     $('#new_password1').val(hash_new1);
     $('#new_password2').val(hash_new1);
-
+    $('#key').val(key);
     $("#datosAEnviar").submit();
     return true;
     startOverlay();
