--- a/intranet/htdocs/intranet-tmpl/changepassword.tmpl
+++ b/intranet/htdocs/intranet-tmpl/changepassword.tmpl
@@ -83,6 +83,7 @@ $(document).ready(function() {
         <input type="hidden" name="new_password2" id="new_password2" value="">
         <input type="hidden" name="usuario" id="usuario" value="[% nro_socio %]">
         <input type="hidden" name="changePassword" id="changePassword" value="">
+        <input type="hidden" name="key" id="key" />
         <input type="hidden" name="actual_password" id="actual_password" value="">
         <input type="hidden" name="token" value="[% token %]" id="token">
 </form>
