scroll en modales bootstrap

--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
@@ -412,6 +412,9 @@ body {
 .bigModal{
     width: 83%;
     left: 30%;
+    /* para hacer scroll */
+    overflow-y: scroll;
+    max-height: 80%;
 }
 
 .title{
