--- a/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
@@ -15,7 +15,7 @@
 [% PERL %]
     print C4::AR::Filtros::tabbedPane( titulo    => "[% 'Reportes de Cat&aacute;logo' | i18n %]",
                                  subtitulo => "[% 'Navegue por las pesta&ntilde;as para acceder a los distintos reportes' | i18n %]",
-                                 content   => [ {id => 'labels', text=> "[% 'B&aacute;squedas' | i18n %]" },
+                                 content   => [ {id => 'labels', text=> "[% 'B&uacute;squedas' | i18n %]" },
                                                 {id => 'registro', text => "[% 'Otro' | i18n %]"},
                                               ],
                                  content_id=> ['reportes_usuarios'],
