legajo en usuarios potenciales

--- a/intranet/htdocs/intranet-tmpl/usuarios/potenciales/detalleUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/potenciales/detalleUsuario.tmpl
@@ -42,7 +42,7 @@
 	        <br>
 	            
 	        [% "Legajo" | i18n %]:
-	                        <b> [%  socio.persona.getNro_documento %]</b><br>
+	                        <b> [%  socio.persona.legajo %]</b><br>
 	
 	        [% "Ciudad" | i18n %]:
 	                        <b> [%  socio.persona.ciudad_ref.getNombre %]</b><br>
