un poco de logos y hitorial de reservas operacion

--- a/intranet/htdocs/intranet-tmpl/admin/novedades_opac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/novedades_opac.tmpl
@@ -7,7 +7,7 @@
 		var objAH_novedad      	 		= new AjaxHelper(updateShowNovedad);
 		objAH_novedad.showOverlay       = true;
 		objAH_novedad.debug             = true;
-		objAH_novedad.url               = '[% url_prefix %]/admin/ver_novedad.pl';
+		objAH_novedad.url               = URL_PREFIX+'/admin/ver_novedad.pl';
 		objAH_novedad.id				= id;
 		objAH_novedad.sendToServer();
 	}
