--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -222,7 +222,7 @@
 								              <h3>[% 'Indice del grupo' | i18n %]</h3>
 								            </div>
 								            <div class="modal-body">
-								              <p>[% indice %]</p>
+								              <pre>[% indice | trim %]</pre>
 								            </div>
 
                           </div>
