--- a/intranet/htdocs/intranet-tmpl/reports/circulacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/circulacion.tmpl
@@ -17,7 +17,7 @@
             [% INCLUDE 'partials/reportes/_reporte_circulacion.inc' %]
         </div>
         <div class="tab-pane fade" id="otro">
-          <p></p>
+          <p>Otro</p>
         </div>
       </div>
 </section>
