--- a/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
@@ -23,24 +23,16 @@
                         [% FOREACH novedad IN novedades %]
                             <tr class="leido[% novedad.getLeido %]">
                                 <td>
-                                    <a class="fancy_link" href="#" onclick="showNovedad([% novedad.id %]);">
-                                        [% novedad.getFechaLegible %]
-                                    </a>
+                                    [% novedad.getFechaLegible %]
                                 </td>
                                 <td>
-                                    <a class="fancy_link" href="#" onclick="showNovedad([% novedad.id %]);">
-                                        [% novedad.getUsuario%] 
-                                    </a>
+                                    [% novedad.getUsuario%] 
                                 </td>
                                 <td>
-                                    <a class="fancy_link" href="#" onclick="showNovedad([% novedad.id %]);">
-                                        [% novedad.getTitulo %] 
-                                    </a>
+                                    [% novedad.getTitulo %] 
                                 </td>
                                 <td>
-                                    <a class="fancy_link" href="#" onclick="showNovedad([% novedad.id %]);">
-                                        [% novedad.getResumen %] 
-                                    </a>
+                                    [% novedad.getResumen %] 
                                 </td>
                                 <td>
                                     [% novedad.getCategoria %]
@@ -50,13 +42,17 @@
                                 
                                     [% PERL %]
                                         print C4::AR::Filtros::action_set_button(    
-                                              title   => " [% 'Editar' | i18n %]",
+                                              title   => " [% 'Novedad' | i18n %]",
                                               button  => 'btn btn-primary',
-                                              url     => "[% url_prefix %]/admin/global/editar_novedad_intra.pl",
-                                              params  =>  ["id=[% novedad.id %]"],
+                                              action  => 'showNovedad("[% novedad.id %]")',
                                               icon    => "icon-white icon-edit",
                                               actions         => [
-                                                                  { title   => "Eliminar", 
+                                                                  { title   => "Editar", 
+                                                                    url     => "[% url_prefix %]/admin/global/editar_novedad_intra.pl",
+                                                                    params  =>  ["id=[% novedad.id %]"],
+                                                                    icon    => "icon-edit",
+                                                                   },
+                                                                   { title   => "Eliminar", 
                                                                     action  => 'eliminarNovedad("[% novedad.id %]")', 
                                                                     icon    => "icon-remove",
                                                                    },
