--- a/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
@@ -43,7 +43,10 @@
                                                          class           => "",
                                                          columns         => ['[% "Tipo"|i18n %]','[% "T&iacute;tulo"|i18n %]','[% "Autor"|i18n %]',
                                                                              '[% "Edici&oacute;n"|i18n %]','[% "Disponibilidad"|i18n %]', [% IF signatura_filter %] '[% "Signatura"|i18n %]' [% END %],
-                                                                            ]
+                                                                            ],
+                                                          order          => {  'Titulo' =>'titulo', 
+                                                                               'Autor' => 'autor',
+                                                                             }              
                                                          
                              ) ;
              [% END %]
